@@ -524,6 +524,16 @@ name|docIdSetIterator
 operator|.
 name|next
 argument_list|()
+operator|&&
+name|scorer
+operator|.
+name|skipTo
+argument_list|(
+name|docIdSetIterator
+operator|.
+name|doc
+argument_list|()
+argument_list|)
 decl_stmt|;
 while|while
 condition|(
@@ -540,6 +550,13 @@ argument_list|()
 decl_stmt|;
 if|if
 condition|(
+name|filterDocId
+operator|>
+name|scorer
+operator|.
+name|doc
+argument_list|()
+operator|&&
 operator|!
 name|scorer
 operator|.
@@ -588,12 +605,8 @@ name|more
 operator|=
 name|docIdSetIterator
 operator|.
-name|skipTo
-argument_list|(
-name|scorerDocId
-operator|+
-literal|1
-argument_list|)
+name|next
+argument_list|()
 expr_stmt|;
 block|}
 else|else
